Add submit, winGame, and loseGame Function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <button id="submit">Submit</button>
     </form>
 
-    <div id="score"></div>
+    <div id="correct-score"></div>
+
+    <div id="incorrect-score"></div>
 
     <div id="previous-results"></div>
 
