Add random questions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   />
 </head>
 <body>
-    <h1 id="title">JavaScript Trivia</h1>
+    <h1 id="title">JavaScript Quiz</h1>
     
     <h2 id="rules"><span id="rule">Conditions:</span> Get 7/10 correct answers to pass. <br> Get more than 3 incorrect to fail. <br> Good luck!</h2>
     
